MFG Ready Version/force-app/main/default/objects/mfg_Claim__c/mfg_Claim__c.object-meta.xml
<CustomObject>
    <label>Claim</label>
    <nameField>
        <displayFormat>CLM-{0000000000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>