MFG Ready Version/force-app/main/default/objects/mfg_Claim__c/fields/mfg_CIN__c.field-meta.xml
<CustomField>
    <fullName>mfg_CIN__c</fullName>
    <inlineHelpText>Corporate Identification Number - A 21-character alphanumeric code issued by the Registrar of Companies (ROC) in India under the Companies Act, 2013. It identifies Indian-registered companies.</inlineHelpText>
    <label>CIN</label>
    <length>21</length>
    <type>Text</type>
</CustomField>