MFG Ready Version/force-app/main/default/objects/mfg_Claim__c/fields/mfg_Claim_Source__c.field-meta.xml
<CustomField>
    <fullName>mfg_Claim_Source__c</fullName>
    <label>Claim Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>