MFG Ready Version/force-app/main/default/objects/mfg_Claim__c/fields/mfg_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>mfg_Closed_Date__c</fullName>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>