MFG Ready Version/force-app/main/default/objects/mfg_Claim__c/fields/mfg_Contact__c.field-meta.xml
<CustomField>
    <fullName>mfg_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>