MFG Ready Version/force-app/main/default/objects/mfg_Claim__c/fields/mfg_Priority__c.field-meta.xml
<CustomField>
    <fullName>mfg_Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
                <isActive>false</isActive>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Urgent</fullName>
                <isActive>false</isActive>
                <label>Urgent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>