MFG Ready Version/force-app/main/default/objects/mfg_Claim__c/fields/mfg_Rejected_Items__c.field-meta.xml
<CustomField>
    <fullName>mfg_Rejected_Items__c</fullName>
    <label>Rejected Items</label>
    <summaryFilterItems>
        <field>mfg_Claim_Line_Item__c.mfg_Coverage_Outcome__c</field>
        <operation>equals</operation>
        <value>Excluded</value>
    </summaryFilterItems>
    <summaryForeignKey>mfg_Claim_Line_Item__c.mfg_Claim__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>