MFG Ready Version/force-app/main/default/objects/mfg_Claim__c/fields/mfg_Total_Items__c.field-meta.xml
<CustomField>
    <fullName>mfg_Total_Items__c</fullName>
    <label>Total Items</label>
    <summaryForeignKey>mfg_Claim_Line_Item__c.mfg_Claim__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>