MFG Ready Version/force-app/main/default/objects/mfg_Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mfg_Account__c</columns>
    <columns>mfg_Claim_Source__c</columns>
    <columns>mfg_Priority__c</columns>
    <columns>mfg_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>